--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="amount_to_convert">Enter the amount to convert</string>
     <string name="from">From</string>
     <string name="to">To</string>
+    <string name="convert">Convert</string>
+    <string name="switch_btn">Switch</string>
 </resources>
