- currency converter implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="to">To</string>
     <string name="convert">Convert</string>
     <string name="switch_btn">Switch</string>
+    <string name="converted_value">Converted value</string>
 </resources>
